# pltapp

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PHASE5_PACKAGING_REPORT.md  PLATFORM_ARCHITECTURE.md  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
config/: build.yaml  logging.conf  sensor_config.json  settings.json
requirements/: base.txt  base_qt_common.txt  dev.txt  pyqt6.txt  pyside6.txt  test.txt
scripts/: build.py  build_old.py  clean.py  setup.py  setup_dev.py
src/: __init__.py  data_generator.py  plotting.py
src/app/: __init__.py  app.py  desktop_app.py  root_page.py
tests/: conftest.py  test_basic_functionality.py  test_cli_arguments.py  test_hamburger_menu_ui.py  test_selectdirection_regression.py  test_selenium_ui.py  test_ui_components.py
